objects/GEMS_Manual_Eligibility_Applications__c.object
<CustomObject>
    <fields>
        <fullName>Actual_of_applications_received__c</fullName>
        <label>Actual # of applications received</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Manual Eligibility Applications</relationshipLabel>
        <relationshipName>GEMS_Manual_Eligibility_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <label>GEMS Manual Eligibility Application</label>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Manual Eligibility App Ref#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS Manual Eligibility Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>